load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "dbwriter",
    hdrs = glob(["include/dbwriter/*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    includes = ["include"],
    deps = [
        "@asio",
        "@libpq",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "types_test",
    srcs = ["test/types_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pg_types_test",
    srcs = ["test/pg_types_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "fixed_string_test",
    srcs = ["test/fixed_string_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "table_test",
    srcs = ["test/table_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mapper_test",
    srcs = ["test/mapper_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "transform_test",
    srcs = ["test/transform_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "postgres_test",
    srcs = ["test/postgres_test.cpp"],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "batch_writer_test",
    srcs = [
        "test/batch_writer_test.cpp",
        "test/mock_database.hpp",
    ],
    includes = ["."],
    deps = [
        ":dbwriter",
        "@googletest//:gtest_main",
    ],
)
