load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "error",
    hdrs = ["error.hpp"],
)

cc_library(
    name = "buffer_chain",
    hdrs = ["buffer_chain.hpp"],
)

# Internal epoll implementation
cc_library(
    name = "epoll_event_loop_internal",
    srcs = ["epoll_event_loop.cpp"],
    hdrs = ["epoll_event_loop.hpp", "event_loop.hpp"],
)

# Public event loop interface + type-erased wrapper
cc_library(
    name = "event_loop",
    srcs = ["event_loop.cpp"],
    hdrs = ["event_loop.hpp"],
    deps = [":epoll_event_loop_internal"],
)

# For tests that need direct access to EpollEventLoop
cc_library(
    name = "epoll_event_loop",
    hdrs = ["epoll_event_loop.hpp"],
    deps = [":epoll_event_loop_internal"],
)

cc_library(
    name = "reactor",
    srcs = ["reactor.cpp"],
    hdrs = ["reactor.hpp"],
    deps = [":event_loop"],
)

cc_library(
    name = "component",
    hdrs = ["component.hpp"],
    deps = [
        ":error",
        ":event_loop",
    ],
)

cc_library(
    name = "tcp_socket",
    hdrs = ["tcp_socket.hpp"],
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
    ],
)

cc_library(
    name = "sink",
    hdrs = ["sink.hpp"],
    deps = [
        ":error",
        "//src:record_batch",
    ],
)
