load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "error",
    hdrs = ["error.hpp"],
)

cc_library(
    name = "buffer_chain",
    hdrs = ["buffer_chain.hpp"],
)

# Internal epoll implementation
cc_library(
    name = "epoll_event_loop_internal",
    srcs = ["epoll_event_loop.cpp"],
    hdrs = ["epoll_event_loop.hpp", "event_loop.hpp"],
)

# Public event loop interface + type-erased wrapper
cc_library(
    name = "event_loop",
    srcs = ["event_loop.cpp"],
    hdrs = ["event_loop.hpp"],
    deps = [":epoll_event_loop_internal"],
)

cc_library(
    name = "event",
    hdrs = ["event.hpp"],
    deps = [":event_loop"],
)

# For tests that need direct access to EpollEventLoop
cc_library(
    name = "epoll_event_loop",
    hdrs = ["epoll_event_loop.hpp"],
    deps = [":epoll_event_loop_internal"],
)

cc_library(
    name = "suspendable",
    hdrs = ["suspendable.hpp"],
)

cc_library(
    name = "component",
    hdrs = ["component.hpp"],
    deps = [
        ":error",
        ":event_loop",
        ":suspendable",
    ],
)

cc_library(
    name = "tcp_socket",
    hdrs = ["tcp_socket.hpp"],
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
    ],
)

cc_library(
    name = "sink",
    hdrs = ["sink.hpp"],
    deps = [
        ":error",
        "//src:record_batch",
    ],
)

cc_library(
    name = "protocol",
    hdrs = ["protocol.hpp"],
    deps = [
        ":event_loop",
        ":sink",
    ],
)

cc_library(
    name = "pipeline",
    hdrs = ["pipeline.hpp"],
    deps = [
        ":event_loop",
        ":protocol",
        ":suspendable",
        "//src:dns_resolver",
    ],
)

cc_library(
    name = "url_encode",
    hdrs = ["url_encode.hpp"],
    deps = ["@fmt"],
)

cc_library(
    name = "http_request_builder",
    hdrs = ["http_request_builder.hpp"],
    deps = [
        ":url_encode",
        "@fmt",
    ],
)

cc_library(
    name = "tls_transport",
    hdrs = ["tls_transport.hpp"],
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
        "@openssl_sys//:crypto",
        "@openssl_sys//:ssl",
    ],
)

cc_library(
    name = "http_client",
    hdrs = ["http_client.hpp"],
    deps = [
        ":component",
        ":error",
        ":event_loop",
        ":tls_transport",
        "@llhttp",
    ],
)

cc_library(
    name = "zstd_decompressor",
    hdrs = ["zstd_decompressor.hpp"],
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
        "@zstd",
    ],
)

cc_library(
    name = "json_parser",
    hdrs = ["json_parser.hpp"],
    deps = [
        ":buffer_chain",
        ":error",
        "@rapidjson",
    ],
)

cc_library(
    name = "timer",
    hdrs = ["timer.hpp"],
    deps = [":event_loop"],
)
