load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "public_headers",
    srcs = glob(["*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "error",
    hdrs = ["error.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
)

cc_library(
    name = "buffer_chain",
    hdrs = ["buffer_chain.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
)

# Internal epoll implementation
cc_library(
    name = "epoll_event_loop_internal",
    srcs = ["epoll_event_loop.cpp"],
    hdrs = ["epoll_event_loop.hpp", "event_loop.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
)

# Public event loop interface + type-erased wrapper
cc_library(
    name = "event_loop",
    srcs = ["event_loop.cpp"],
    hdrs = ["event_loop.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [":epoll_event_loop_internal"],
)

# For tests that need direct access to EpollEventLoop
cc_library(
    name = "epoll_event_loop",
    hdrs = ["epoll_event_loop.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [":epoll_event_loop_internal"],
)

cc_library(
    name = "suspendable",
    hdrs = ["suspendable.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
)

cc_library(
    name = "component",
    hdrs = ["component.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":error",
        ":event_loop",
        ":suspendable",
    ],
)

cc_library(
    name = "tcp_socket",
    hdrs = ["tcp_socket.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
    ],
)

cc_library(
    name = "sink",
    hdrs = ["sink.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":error",
        "//src:record_batch",
    ],
)

cc_library(
    name = "protocol",
    hdrs = ["protocol.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":event_loop",
        ":sink",
    ],
)

cc_library(
    name = "pipeline",
    hdrs = ["pipeline.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":event_loop",
        ":protocol",
        ":suspendable",
        "//src:dns_resolver",
    ],
)

cc_library(
    name = "url_encode",
    hdrs = ["url_encode.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = ["@fmt"],
)

cc_library(
    name = "http_request_builder",
    hdrs = ["http_request_builder.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":url_encode",
        "@fmt",
    ],
)

cc_library(
    name = "tls_transport",
    hdrs = ["tls_transport.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
        "@openssl_sys//:crypto",
        "@openssl_sys//:ssl",
    ],
)

cc_library(
    name = "http_client",
    hdrs = ["http_client.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":component",
        ":error",
        ":event_loop",
        ":tls_transport",
        "@llhttp",
    ],
)

cc_library(
    name = "zstd_decompressor",
    hdrs = ["zstd_decompressor.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":buffer_chain",
        ":component",
        ":error",
        ":event_loop",
        "@zstd",
    ],
)

cc_library(
    name = "json_parser",
    hdrs = ["json_parser.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [
        ":buffer_chain",
        ":error",
        "@rapidjson",
    ],
)

cc_library(
    name = "timer",
    hdrs = ["timer.hpp"],
    strip_include_prefix = "/lib/stream",
    include_prefix = "dbn_pipe/stream",
    deps = [":event_loop"],
)
