package(default_visibility = ["//visibility:public"])

cc_library(
    name = "api_pipeline",
    hdrs = ["api_pipeline.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:http_client",
        "//lib/stream:json_parser",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "//lib/stream:url_encode",
    ],
)

cc_library(
    name = "metadata_client",
    hdrs = ["metadata_client.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:pipeline",
        "//src:api_protocol",
        "//src:dns_resolver",
        "//src:retry_policy",
    ],
)

cc_library(
    name = "symbology_client",
    hdrs = ["symbology_client.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":api_pipeline",
        "//src:dns_resolver",
        "//src:retry_policy",
        "//src:stype",
    ],
)
