package(default_visibility = ["//visibility:public"])

filegroup(
    name = "public_headers",
    srcs = glob(["*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "metadata_client",
    hdrs = ["metadata_client.hpp"],
    strip_include_prefix = "/src/api",
    include_prefix = "dbn_pipe/api",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:pipeline",
        "//src:api_protocol",
        "//src:dns_resolver",
        "//src:retry_policy",
    ],
)

cc_library(
    name = "symbology_client",
    hdrs = ["symbology_client.hpp"],
    strip_include_prefix = "/src/api",
    include_prefix = "dbn_pipe/api",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:pipeline",
        "//src:api_protocol",
        "//src:dns_resolver",
        "//src:retry_policy",
        "//src:stype",
        "@fmt",
    ],
)
