load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fixed_string",
    hdrs = ["fixed_string.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "column_type",
    hdrs = ["column_type.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "table",
    hdrs = ["table.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":column_type",
        ":fixed_string",
    ],
)
