load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fixed_string",
    hdrs = ["fixed_string.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "column_type",
    hdrs = ["column_type.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "table",
    hdrs = ["table.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":column_type",
        ":fixed_string",
    ],
)

cc_library(
    name = "trades",
    hdrs = ["trades.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)

cc_library(
    name = "mbp1",
    hdrs = ["mbp1.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)

cc_library(
    name = "ohlcv",
    hdrs = ["ohlcv.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)

cc_library(
    name = "definitions",
    hdrs = ["definitions.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)

cc_library(
    name = "statistics",
    hdrs = ["statistics.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)

cc_library(
    name = "status",
    hdrs = ["status.hpp"],
    visibility = ["//visibility:public"],
    deps = [":table"],
)
