load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "fixed_string_test",
    srcs = ["fixed_string_test.cpp"],
    deps = [
        "//src/table:fixed_string",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "column_type_test",
    srcs = ["column_type_test.cpp"],
    deps = [
        "//src/table:column_type",
        "@googletest//:gtest_main",
    ],
)
